haskell-devscripts (0.5.13~arjan1) unstable; urgency=low

  * Move debhelper to Build-Depends as suggested by lintian.
  * Change she-bang for dh_haskell to /bin/sh as does not use any
    bashims.
  * Replace dh_haskell_buildinst with simple shell script to decrease code
    duplicity. 

 -- Arjan Oosting <arjanoosting@home.nl>  Fri,  6 Oct 2006 22:30:10 +0200

haskell-devscripts (0.5.12) unstable; urgency=low

  * New support for building profiling packages.  Thanks to Jeremy Shaw
    for this.

 -- John Goerzen <jgoerzen@complete.org>  Fri, 11 Aug 2006 17:58:47 -0500

haskell-devscripts (0.5.11) unstable; urgency=low

  * Now give version when deregistering packages in postinst.

 -- John Goerzen <jgoerzen@complete.org>  Tue, 25 Oct 2005 05:58:47 -0500

haskell-devscripts (0.5.10) unstable; urgency=low

  * Fixed a bug in dh_haskell when building multiple packages,
    introduced with the split in 0.5.7.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 29 Aug 2005 06:06:25 -0500

haskell-devscripts (0.5.9) unstable; urgency=low

  * Applied patch from Florian Ragwitz to autodetect Setup.lhs vs.
    Setup.hs.

 -- John Goerzen <jgoerzen@complete.org>  Tue, 23 Aug 2005 05:35:35 -0500

haskell-devscripts (0.5.8) unstable; urgency=low

  * Fixed a few bugs in the new system.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 17 Aug 2005 03:41:05 -0500

haskell-devscripts (0.5.7) unstable; urgency=low

  * Added dh_haskell_{prep,build,install}.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 17 Aug 2005 02:46:04 -0500

haskell-devscripts (0.5.6) unstable; urgency=low

  * Tightened up Depends on libghc6-cabal-dev for interface consistency.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 28 Mar 2005 09:00:47 -0600

haskell-devscripts (0.5.5) unstable; urgency=low

  * Adjusted Depends so ghc 6.4 can be considered to fulfill the requirement
    for having Cabal.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 28 Mar 2005 08:56:48 -0600
