@@ -1,3 +1,4 @@
 usr/bin
 usr/share/debhelper/autoscripts
+usr/share/haskell-devscripts
 
